Fix attribution alignment

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -6,7 +6,7 @@
   padding: ($global-spacing * 2) 0;
 
   > .inner {
-    @extend .row, .row--centered;
+    @extend .row;
   }
 }
 
